Migrated to URIs at rest  - URL hashcodes were a major performance holdup  - All URL collections and URLs used in parsing were replaced with URIs  - Minor bugfix for URLs without protocol in `HTMLParser`